2008-06-30  Øyvind Kolås  <pippin@o-hand.com>

	Disable XInput handling for keyboard events, re-enabling key press and
	release events when pointer is outside window as well as re-enabling
	keyrepeat.

	* clutter/glx/clutter-stage-glx.c: (clutter_stage_glx_realize): select
	for KeyPressMask and KeyReleaseMask even with XInput enabled.
	* clutter/x11/clutter-backend-x11.c: (_clutter_x11_register_xinput): 
	Disabled the XInput keyboard code paths (comments and #if 0's)
	* clutter/x11/clutter-event-x11.c: (event_translate): always handle
	keyboard events without regard to XInput.

2008-06-29  Matthew Allum  <mallum@openedhand.com>

	* clutter/x11/clutter-event-x11.c: 
	ifdef convert_xdevicekey_to_xkey () with XINPUT check.
	(fix via Andy Wingo)

2008-06-29  Tommi Komulainen  <tommi.komulainen@iki.fi>

	* clutter/osx/clutter-osx.h (_clutter_event_osx_put)
	* clutter/osx/clutter-event-osx.c (clutter_event_osx_translate,
	NSEvent:clutterStage:)
	* clutter/osx/clutter-stage-osx.c (EVENT_HANDLER): Since events are
	delivered to ClutterGLView, pass the associated ClutterStage directly
	to event translation. Avoids relying on being embedded in
	ClutterGLWindow, which makes it easier to implement clutter-gtk.

2008-06-29  Tommi Komulainen  <tommi.komulainen@iki.fi>

	* clutter/osx/clutter-event.osx.c (NSEvent:clutterKeyVal:): Add
	comment, on OSX backend the Shift modifier is included in 'keyval'
	making it identical to 'unicode_value'  Instead of <Shift>a or
	<Shift>3 you'd get <Shift>A and <Shift>#

2008-06-27  Matthew Allum  <mallum@openedhand.com>

	* clutter/cogl/gl/cogl.c:
        Temp workaround for 10.4 ATI card OSX folks, see #929 
        (Tommi Komulainen)
        
        Bug 998 - clutter always captures X input events
        
	* clutter/eglx/clutter-stage-egl.c:
	* clutter/glx/clutter-stage-glx.c:
        When we disable X event retrival, dont still select for window
        events. 

2008-06-27  Emmanuele Bassi  <ebassi@openedhand.com>
