@@ -1,3 +1,8 @@
+2008-06-30  Chris Lord  <chris@openedhand.com>
+
+	* tests/test-shader.c: (main):
+	Add a new shader to test-shaders (Sobel operator edge-detect)
+
 2008-06-30  Øyvind Kolås  <pippin@o-hand.com>
 
 	Disable XInput handling for keyboard events, re-enabling key press and
